--- a/style.css
+++ b/style.css
@@ -138,6 +138,12 @@
    
     
 }
+.home-img{
+    width:300px;
+    height:300px;
+    margin:5px;
+    border-radius: 5px;;
+}
 
 .new-arrival{
     display:flex;
@@ -338,6 +344,9 @@ flex-basis: 20%;
     .service-container2{
         flex-direction: column;
     }
-    
+    .header-img{
+        width: 200px;
+        height: 200px;
+    }
     
 }
