--- a/style.css
+++ b/style.css
@@ -174,6 +174,11 @@
     align-items: center;
     margin-top: 20px;
     gap:10px;
+    padding:10px;
+}
+.news p{
+    margin:10px;
+    
 }
 .news input{
     padding:11px;
