--- a/style.css
+++ b/style.css
@@ -86,13 +86,26 @@
 .header{
     display:flex;
     justify-content: center;
+    align-items: center;
     gap:20px;
     padding: 40px;
     margin:10px;
+    flex-wrap:wrap;
 }
 .header-content{
-    margin-top: 80px;;
+    
     margin-left:20px;
+    justify-content: center;
+    text-align: center;
+}
+.header-content h {
+    font-size: 28px;
+    font-weight: bold;
+    display: block;
+}
+.header-content p {
+    font-size: 16px;
+    margin: 10px 0;
 }
 .header-btn{
     padding-left: 20px;
@@ -109,6 +122,8 @@
     height:300px;
     margin:5px;
     border-radius: 5px;;
+    object-fit: cover;
+    align-items: center;
 }
 /* service */
 .service{
@@ -143,6 +158,7 @@
     height:300px;
     margin:5px;
     border-radius: 5px;;
+    
 }
 
 .new-arrival{
@@ -176,10 +192,7 @@
     gap:10px;
     padding:10px;
 }
-.news p{
-    margin:10px;
-    
-}
+
 .news input{
     padding:11px;
     width:70vw;
@@ -349,9 +362,19 @@ flex-basis: 20%;
     .service-container2{
         flex-direction: column;
     }
-    .header-img{
+    /* .header-img{
         width: 200px;
         height: 200px;
+    } */
+     .header {
+        flex-direction: column; /* stack vertically */
+        text-align: center;
     }
+
+    .header-content {
+        margin-top: 10px;
+        margin-left: 0;
+    }
+
     
 }
