--- a/style.css
+++ b/style.css
@@ -93,9 +93,9 @@
     flex-wrap:wrap;
 }
 .header-content{
-    
+    margin-top: 20px; 
     margin-left:20px;
-    justify-content: center;
+    
     text-align: center;
 }
 .header-content h {
@@ -123,7 +123,7 @@
     margin:5px;
     border-radius: 5px;;
     object-fit: cover;
-    align-items: center;
+    
 }
 /* service */
 .service{
@@ -369,6 +369,7 @@ flex-basis: 20%;
      .header {
         flex-direction: column; /* stack vertically */
         text-align: center;
+        
     }
 
     .header-content {
@@ -376,5 +377,8 @@ flex-basis: 20%;
         margin-left: 0;
     }
 
-    
+    .header-img{
+        width:90%;
+       
+    }
 }
